Fixes #6713: Long names needs to be truncated while listing
(cherry picked from commit adb487e05b284ff6a6462a9b49b14767f01e9d3d)

Conflicts:
	app/assets/stylesheets/application.scss
	app/views/common_parameters/index.html.erb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -307,6 +307,18 @@ table.table thead .sorting_desc { background: #f9f9f9 url('sort_desc.png') no-re
 table.table thead .sorting_asc_disabled { background: #f9f9f9 url('sort_asc_disabled.png') no-repeat center right; }
 table.table thead .sorting_desc_disabled { background: #f9f9f9 url('sort_desc_disabled.png') no-repeat center right; }
 
+table tr td:last-child {
+  .btn {
+    float:none;
+  }
+
+  white-space: nowrap;
+}
+
+.nbsp {
+  white-space: nowrap;
+}
+
 .diff-modal{width: 720px; height: 520px;}
 .modal-body{max-height: 800px;}
 
